--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "hyperquest": "^2.1.3",
     "ndjson": "^2.0.0",
     "react": "^18.2.0",
+    "react-bluetooth": "^0.0.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
