--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
+    "chess.js": "^1.0.0-beta.8",
     "hyperquest": "^2.1.3",
     "ndjson": "^2.0.0",
     "react": "^18.2.0",
